--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,3 +14,13 @@
     align-items: flex-start;
     /* as 2 sidebars sempre alinhados pro topo */
 }
+
+@media (max-width: 768px) {
+    html {
+        font-size: 87.5%;
+    }
+
+    .wrapper {
+        grid-template-columns: 1fr;
+    }
+}
