--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -46,17 +46,6 @@
     gap: 1rem;
 }
 
-.author img {
-    /*box-sizing: initial;
-     quando eu adicionar border, outline, que essas coisas adicionais ocupem espaço a mais e nao tire do tamanho da imagem */
-    width: calc(3rem + 12px);
-    height: calc(3rem + 12px);
-    /*adicionando 12 px para nao diminuir o tamanho da imagem*/
-    border-radius: 8px;
-    border: 4px solid var(--gray-800);
-    outline: 2px solid var(--green-500);
-}
-
 .authorInfo strong {
     display: block;
     color: var(--gray-100);
@@ -123,4 +112,8 @@
 
 .commentForm button:hover {
     background-color: var(--green-300);
+}
+
+.commentList {
+    margin-top: 2rem;
 }
